# Energy_model

./: CMakeLists.txt  Host  Host.cpp  LICENSE  Prova  Prova.cpp
Kernels/: Kernels.cl
Tools/: CMakeLists.txt  Dataplotting.cpp  Dataplotting.hpp  Davisloading.cpp  Davisloading.hpp  Filters.cpp  Filters.hpp  Ocl.cpp  Ocl.hpp
